<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <variable
      name="main"
      type="com.forem.android.presentation.explore.ExploreFragment" />

    <variable
      name="viewModel"
      type="com.forem.android.presentation.explore.ExploreFragmentViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/explore_fragment_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:focusable="true"
    android:importantForAccessibility="yes"
    android:screenReaderFocusable="true"
    tools:targetApi="p">

    <View
      android:id="@+id/top_view"
      style="@style/Toolbar.Background"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/back_image_view"
      style="@style/Toolbar.BackArrow"
      android:contentDescription="@string/navigate_up"
      android:onClick="@{(v) -> main.onBackClicked()}"
      app:layout_constraintBottom_toBottomOf="@id/top_view"
      app:layout_constraintStart_toStartOf="@id/top_view"
      app:layout_constraintTop_toTopOf="@id/top_view" />

    <TextView
      android:id="@+id/forems_text_view"
      style="@style/Toolbar.Title"
      android:text="@string/forems"
      app:layout_constraintBottom_toBottomOf="@id/top_view"
      app:layout_constraintEnd_toStartOf="@id/passport_image_view"
      app:layout_constraintStart_toEndOf="@id/back_image_view"
      app:layout_constraintTop_toTopOf="@id/top_view" />

    <ImageView
      android:id="@+id/passport_image_view"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:contentDescription="@string/open_forem_passport_content_description"
      android:elevation="4dp"
      android:onClick="@{(v) -> main.onPassportClicked()}"
      android:padding="12dp"
      android:src="@drawable/ic_passport"
      app:layout_constraintBottom_toBottomOf="@id/top_view"
      app:layout_constraintEnd_toEndOf="@id/top_view"
      app:layout_constraintTop_toTopOf="@id/top_view"
      app:tint="@color/toolbar_icon_color" />

    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tab_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@color/toolbar_background_color"
      android:elevation="4dp"
      android:fillViewport="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/top_view"
      app:tabIndicatorColor="@color/tab_selected_text_color"
      app:tabMode="fixed"
      app:tabSelectedTextColor="@color/tab_selected_text_color"
      app:tabTextAppearance="@style/TabItemTextAppearance"
      app:tabTextColor="@color/tab_not_selected_text_color">

      <com.google.android.material.tabs.TabItem
        android:id="@+id/my_list_tab_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/my_list" />

      <com.google.android.material.tabs.TabItem
        android:id="@+id/explore_tab_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/explore" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/forem_recycler_view"
      android:layout_width="@dimen/explore_fragment_content_max_width"
      android:layout_height="0dp"
      android:clipToPadding="false"
      android:paddingBottom="@dimen/common_padding_bottom"
      android:visibility="@{viewModel.errorText.length() == 0 ? View.VISIBLE : View.GONE, default=visible}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <TextView
      android:id="@+id/error_text_view"
      android:layout_width="@dimen/explore_fragment_content_max_width"
      android:layout_height="0dp"
      android:fontFamily="@font/epilogue_regular"
      android:gravity="center"
      android:padding="32dp"
      android:text="@{viewModel.errorText}"
      android:textColor="@color/primary_text_color"
      android:textSize="16sp"
      android:visibility="@{viewModel.errorText.length() > 0 ? View.VISIBLE : View.GONE, default=gone}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <Button
      android:id="@+id/add_forem_by_domain_button"
      style="@style/PrimaryButton"
      android:layout_width="@dimen/explore_fragment_content_max_width"
      android:layout_marginStart="16dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="12dp"
      android:onClick="@{(v) -> main.onAddForemByDomainButtonClicked()}"
      android:text="@string/add_forem_by_domain"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
      android:id="@+id/loading_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/loading_data_content_description"
      android:indeterminate="true"
      android:visibility="@{viewModel.loadingViewVisibility ? View.VISIBLE : View.GONE, default=gone}"
      app:indicatorColor="@color/circular_progress_indicator_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
