<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="com.forem.android.presentation.onboarding.OnboardingHeaderItemViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/onboarding_header_background_color">

    <TextView
      android:id="@+id/onboarding_welcome_text_view"
      style="@style/Title"
      android:layout_width="@dimen/onboarding_content_max_width"
      android:layout_marginStart="28dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="28dp"
      android:text="@string/welcome_to_forem"
      android:textColor="@color/onboarding_header_text_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/onboarding_description_text_view"
      style="@style/Subtitle1"
      android:layout_width="@dimen/onboarding_content_max_width"
      android:layout_marginTop="16dp"
      android:text="@string/forem_description"
      android:textColor="@color/onboarding_header_text_color"
      app:layout_constraintEnd_toEndOf="@id/onboarding_welcome_text_view"
      app:layout_constraintStart_toStartOf="@id/onboarding_welcome_text_view"
      app:layout_constraintTop_toBottomOf="@id/onboarding_welcome_text_view" />

    <View
      android:id="@+id/wave_view"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/wave_background"
      android:backgroundTint="@color/onboarding_header_wave_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/onboarding_description_text_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/bottom_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/onboarding_forem_item_background_color"
      android:orientation="horizontal"
      android:paddingBottom="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/wave_view">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/onboarding_content_max_width"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
          android:id="@+id/featured_forems_text_view"
          style="@style/Subtitle2"
          android:layout_width="0dp"
          android:layout_marginStart="20dp"
          android:gravity="center_vertical"
          android:lines="2"
          android:minHeight="48dp"
          android:text="@string/featured_forems"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/add_private_text_view"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/add_private_text_view"
          style="@style/Subtitle2"
          android:layout_width="0dp"
          android:layout_marginStart="8dp"
          android:layout_marginEnd="20dp"
          android:gravity="center_vertical|end"
          android:lines="2"
          android:minHeight="48dp"
          android:onClick="@{(v) -> viewModel.onAddForemClicked()}"
          android:text="@string/add_forem_by_domain"
          android:textColor="@color/onboarding_add_forem_color"
          app:layout_constraintBottom_toBottomOf="@id/featured_forems_text_view"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toEndOf="@id/featured_forems_text_view"
          app:layout_constraintTop_toTopOf="@id/featured_forems_text_view" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
